# PAHFITcube

./: .gitignore  .readthedocs.yml  MANIFEST.in  MIRI-cubes.ipynb  README.md  README.rst  SAGE-Spec-cubes.ipynb  conftest.py  example_command.sh  make_trimmed_model.py  merge_miri_cubes.py  merge_spitzer_cubes.py  pahfit-interactive.ipynb  pahfit_cube.py  plotting.py  preview_cube.py  pyproject.toml  resample_and_merge_spitzer_cubes.py  run_pahfit_cube.py  setup.cfg  setup.py  tox.ini  wcshacks.py
.github/workflows/: ci_tests.yml
docs/: conf.py  cubes.rst  fitting.rst  index.rst  setup.cfg  visualization.rst  workarounds.rst
docs/pahfitcube/: index.rst
licenses/: LICENSE.rst
notebooks/: make_trimmed_model.py  minimal.ipac  pahfit-interactive.ipynb  stitching_experiment.ipynb  trimmed-model.ipynb
pahfitcube/: conftest.py  cube_aperture.py  cube_model.py  iohacks.py  map_collection.py  merge_cubes.py  merge_miri_cubes.py  merge_spitzer_cubes.py  partial_map.py  plot_all_fits.py  plotting.py  preview_cube.py  read_cube.py  run_pahfit_cube.py  wcshacks.py
pahfitcube/example_subpkg/: setup_package.py
pahfitcube/scripts/: preview_cube.py  run_pahfitcube.py
pahfitcube/tests/: test_imports.py
