[project]
name = "pahfitcube"
version = "0"

[build-system]

requires = ["setuptools",
            "setuptools_scm",
            "wheel",
            "extension-helpers",
            "oldest-supported-numpy"]
            # "cython==0.29.14"]

build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ["pahfitcube"]