[metadata]
name = pahfitcube
author = Dries Van De Putte
author_email = dvandeputte@stsci.edu
license = Apache Software Licence 2.0
license_file = licenses/LICENSE.rst
url = http://docs.astropy.org/projects/package-template/
description = pahfitcube
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = astropy/astropy

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
setup_requires = setuptools_scm
install_requires =
    pahfit

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
pahfitcube = data/*

[tool:pytest]
testpaths = "pahfitcube" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
# addopts = --doctest-rst

[coverage:run]
omit =
    pahfitcube/_astropy_init*
    pahfitcube/conftest.py
    pahfitcube/*setup_package*
    pahfitcube/tests/*
    pahfitcube/*/tests/*
    pahfitcube/extern/*
    pahfitcube/version*
    */pahfitcube/_astropy_init*
    */pahfitcube/conftest.py
    */pahfitcube/*setup_package*
    */pahfitcube/tests/*
    */pahfitcube/*/tests/*
    */pahfitcube/extern/*
    */pahfitcube/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
